logs/session.log
[2026-04-05 10:04:04] Attempt: 1 | Result: SUCCESS | Error: 
[2026-04-05 18:40:02] Attempt: 1 | Result: CAGE FAILURE | Error: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/app/filter_numbers_skill.py", line 40
    [Output: - 30]
           ^
SyntaxError: invalid syntax

[2026-04-05 18:41:12] Attempt: 2 | Result: SUCCESS | Error: 
[2026-04-06 21:01:07] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-06 21:01:19] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
